5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1831_3179.log
== TEST (2019-06-13 16:34:33) 
-- CODE:
from numpy import *
v = array(eval("Digite: "))
vf = zeros(size(v,dtype=int))
for i in range(size(v)):
	vf[i] = v[i]
	if(v[i] == 1):
		vf[-1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:57) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v,dtype=int))
for i in range(size(v)):
	vf[i] = v[i]
	if(v[i] == 1):
		vf[-1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:17) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	vf[i] = v[i]
	if(v[i] == 1):
		vf[-1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:50) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	vf[i] = v[i]
	if(v[i] == 1):
		vf[-1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:50) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	vf[i] = v[i]
	if(v[i] == 1):
		vf[-5] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-5] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:59) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-1 - 1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-1 - 1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:28) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-1]-1 = v[i]
print(vf)
-- ERROR:
File "XXXX", line 6
    vf[-1]-1 = v[i]
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:51) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:24) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-1] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:23) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
vf = zeros(size(v),dtype=int)
for i in range(size(v)):
	if(v[i] == 1):
		vf[-1] = 1
		vf[i] = v[i]
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
